change replacement name

--- a/config_files/entraid-ssl.conf
+++ b/config_files/entraid-ssl.conf
@@ -29,7 +29,7 @@
 
    OIDCClientID ##YOURAPPID##
    OIDCClientSecret ##YOURAPPSECRET##
-   OIDCCryptoPassphrase ##YOURAPPCLIENTVALUE##
+   OIDCCryptoPassphrase ##OIDCCRYPTOPASSPHRASE##
 
    # This is the redirect URL you specified when creating the application registration
    # This URI must be covered by a <Location> block that includes the "AuthType openid-connect"
